[NA][BE] fix minor comments from previous PRs (#4706)
* Fix PR #4696 comments

* Fix PR #4698 comments

* Fix PR #4699 minor comments

* PR comment: handle duplicates

* revert change to migration file